Realização da atividade 2 de Microservices Development

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,16 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 spring.data.rest.basePath=/api
+
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/MicroServices
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid
+# Security Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/MicroServices
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+# JWT Configuration
+jwt.auth.converter.resource-id=microservices-task
+jwt.auth.converter.principal-attribute=admin
+
+# Logging Configuration
+logging.level.org.springframework.security=TRACE
