added kafka functionality to microservices activity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ jwt.auth.converter.principal-attribute=admin
 
 # Logging Configuration
 logging.level.org.springframework.security=TRACE
+
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.group-id=group_id
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+topic.name.producer=test
